:bug: Fix misaligned icons in the navbar

--- a/src/styles/buildingBlocks.styl
+++ b/src/styles/buildingBlocks.styl
@@ -111,6 +111,8 @@ nav, #footer
         display inline-block
         .icon, .feather
             color white
+        span
+            vertical-align middle
         &:hover
             color white
             opacity 0.65
